Changed the caption

--- a/popup.html
+++ b/popup.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1>Youtube</h1>
-    <button id="checkPage">Check this page now!</button>
+    <button id="checkPage">Check out this page now!</button>
   </body>
 </html>
