--- a/popup.html
+++ b/popup.html
@@ -3,9 +3,14 @@
   <head>
     <title>Youtube button</title>
     <script src="popup.js"></script>
+    <link rel = "stylesheet" href = "popup.css"></link> 
+    <link href="css/hover.css" rel="stylesheet" media="all"></link>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   </head>
   <body>
+ 
+</script>
     <h1>Youtube</h1>
-    <button id="checkPage">Check out this page now!</button>
+    <button id="checkPage" class = "button hvr-glow">Check out this page now!</button>
   </body>
 </html>
